[package]
name = "eadk-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.33"
serde = { version = "1.0.189", features = ["derive"] }
syn = { version = "2.0.38", features = ["full"] }
toml = "0.8.2"
[lib]
proc-macro = true
